components/policies-rd/rings/ring-4/base/base-snapshot/konflux-rbac/bootstrap-tenant-namespace/bootstrap-tenant-namespace-np-olm-cp.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespace-np-olm
spec:
  rules:
  - name: create-allow-from-olm-namespaces-networkpolicy
    skipBackgroundRequests: true
    match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              konflux-ci.dev/type: tenant
    generate:
      generateExisting: true
      orphanDownstreamOnPolicyDelete: true
      synchronize: false
      apiVersion: networking.k8s.io/v1
      kind: NetworkPolicy
      name: allow-from-olm-namespaces
      namespace: '{{request.object.metadata.name}}'
      data:
        spec:
          ingress:
          - from:
            - namespaceSelector:
                matchLabels:
                  openshift.io/scc: anyuid
          podSelector: {}
          policyTypes:
          - Ingress
