components/policies-rd/rings/ring-4/base/base-snapshot/konflux-rbac/bootstrap-tenant-namespace/.chainsaw-test/resources/expected-resources.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: (join('-', [$namespace, $suffix]))
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-ingress
  namespace: (join('-', [$namespace, $suffix]))
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: ingress
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-openshift-monitoring
  namespace: (join('-', [$namespace, $suffix]))
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: monitoring
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-olm-namespaces
  namespace: (join('-', [$namespace, $suffix]))
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          openshift.io/scc: anyuid
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-console-namespaces
  namespace: (join('-', [$namespace, $suffix]))
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          network.openshift.io/policy-group: console
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    config.openshift.io/inject-trusted-cabundle: "true"
  name: trusted-ca
  namespace: (join('-', [$namespace, $suffix]))
